(executable
  (name day01)
  (public_name day01)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day01))

(executable
  (name day02)
  (public_name day02)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day02))

(executable
  (name day03)
  (public_name day03)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day03))

(executable
  (name day04)
  (public_name day04)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day04))

(executable
  (name day05)
  (public_name day05)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day05))

