(executable
  (name day01)
  (public_name day01)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day01))

(executable
  (name day02)
  (public_name day02)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day02))

(executable
  (name day03)
  (public_name day03)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day03))

(executable
  (name day04)
  (public_name day04)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day04))

(executable
  (name day05)
  (public_name day05)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day05))

(executable
  (name day06)
  (public_name day06)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day06))

(executable
  (name day07)
  (public_name day07)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day07))

(executable
  (name day08)
  (public_name day08)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day08))

(executable
  (name day09)
  (public_name day09)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day09))

(executable
  (name day10)
  (public_name day10)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day10))

(executable
  (name day11)
  (public_name day11)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day11))

(executable
  (name day12)
  (public_name day12)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day12))

(executable
  (name day13)
  (public_name day13)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day13))

(executable
  (name day14)
  (public_name day14)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day14))

(executable
  (name day15)
  (public_name day15)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day15))

(executable
  (name day16)
  (public_name day16)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day16))

(executable
  (name day17)
  (public_name day17)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day17))

(executable
  (name day18)
  (public_name day18)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day18))

(executable
  (name day19)
  (public_name day19)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day19))

(executable
  (name day20)
  (public_name day20)
  (libraries adventofcode)
  (preprocess (pps ppx_jane))
  (modules day20))

